--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-4">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="./ChemistryWithMe.html"
+        <a class="navbar-brand text-white" href="../ChemistryWithMe.html"
           >ChemistryWithMe</a
         >
         <button
