--- a/pages/ChemistryWithMe.html
+++ b/pages/ChemistryWithMe.html
@@ -60,7 +60,14 @@
       width: 100%;
       height: auto;
     }
-
+  /* Footer Styling */
+        footer {
+            background-color: crimson;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
     </style>
   </head>
 
@@ -141,7 +148,7 @@
         </div>
         <div class="col-md-6">
           <h3 class="text-red-500 text-2xl font-bold">ChemistryWithMe</h3>
-          <p><br> Chemistry helps us understand the world around us by explaining how substances interact, change, and form new compounds and much more.....</p>
+          <p><br> Learning with me is about more than just equations and reactions—it’s about making chemistry your own. We’ll turn the subject into a story you’re actively writing, where each new chapter brings new knowledge and insight into how the world works.</p>
         </div>
       </div>
     </div>
@@ -154,7 +161,7 @@
         </div>
         <div class="col-md-6 order-md-1">
           <h3 class="text-red-500 text-2xl font-bold">ChemistryWithMe</h3>
-          <p><br> Chemistry plays a key role in medicine by enabling the development of new drugs, treatments, and vaccines that save lives. And much more...</p>
+          <p><br>Learning chemistry with me means understanding how what you learn applies to real-world scenarios. I’ll show you how to use your chemistry knowledge in practical settings, whether it’s in personal life decisions or future career choices, making your education more meaningful.</p>
         </div>
       </div>
     </div>
@@ -167,7 +174,7 @@
         </div>
         <div class="col-md-6">
           <h3 class="text-red-500 text-2xl font-bold">ChemistryWithMe</h3>
-          <p><br>It contributes to environmental protection through the development of sustainable practices, renewable energy sources, and pollution control methods. & much more...</p>
+          <p><br>I believe that learning should be an enjoyable and comfortable experience. With me, you’ll have a safe space to ask any questions, make mistakes, and grow. It’s okay to not know everything at first—together, we’ll explore and learn with confidence..</p>
         </div>
       </div>
     </div>
@@ -180,12 +187,15 @@
         </div>
         <div class="col-md-6 order-md-1">
           <h3 class="text-red-500 text-2xl font-bold">ChemistryWithMe</h3>
-          <p><br> Chemistry is essential in creating everyday products like cleaning agents, cosmetics, and materials for clothing and electronics & much more....</p>
+          <p><br> I’ll encourage you to see chemistry not only as what’s in the textbook but also as a living, breathing science that influences everything around us. Through discussions, extra resources, and real-world applications, you’ll gain a deeper understanding and appreciation for the subject..</p>
         </div>
       </div>
     </div>
   </div>
 </div>
+	   <footer>
+        <p>&copy; 2025 ChemistryWithMe. All rights reserved.</p>
+    </footer>
     <!-- Bootstrap JS (Required for some components like navbar toggle) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
