--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
       .subscribe-btn:hover {
         background-color: #cc0000; /* Slightly darker red for hover effect */
       }
+      /* Footer Styling */
+        footer {
+            background-color: crimson;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
     </style>
   </head>
   <body>
@@ -143,10 +151,9 @@
 
         <!-- Right-side image -->
         <div class="col-12 col-md-6 text-center">
-          <img src="../pic/DD.jpg" alt="Chemistry" class="section-img img-fluid" />  
-            alt="Image related to chemistry learning"
-            class="img-fluid rounded"
-          />
+  <img src="../pic/DD.jpg" alt="Chemistry" class="section-img img-fluid rounded" />
+
+      
         </div>
       </div>
     </div>
