--- a/index.html
+++ b/index.html
@@ -150,11 +150,14 @@
         </div>
 
         <!-- Right-side image -->
-        <div class="col-12 col-md-6 text-center">
-  <img src="../pic/DD.jpg" alt="Chemistry" class="section-img img-fluid rounded" />
+        <!-- Right-side image -->
+<div class="col-12 col-md-6 text-center">
+  <img src="./pic/DD.jpg" alt="Chemistry" class="section-img img-fluid rounded" />
+</div>
+
 
       
-        </div>
+       
       </div>
     </div>
 
