--- a/pages/CONTACT.html
+++ b/pages/CONTACT.html
@@ -112,7 +112,7 @@
               <a
                 class="nav-link text-white active"
                 aria-current="page"
-                href="HOME.html"
+                href="index.html"
                 >HOME</a
               >
             </li>
