--- a/index.html
+++ b/index.html
@@ -25,7 +25,67 @@
         padding-left: 30px; /* Left padding */
         padding-right: 30px; /* Right padding */
       }
+/* Full-screen container for the background image */
+    .hero {
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
+    }
 
+    /* The hero image which transitions */
+    .hero img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: opacity 1s ease-in-out;
+    }
+
+    /* Text content on top of the hero image */
+    .hero .content {
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      color: white;
+	  
+      z-index: 1;
+    }
+
+    .hero .content h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
+
+    .hero .content p {
+      font-size: 1.2rem;
+    }
+
+    /* Keyframe for image transitions */
+    @keyframes imageTransition {
+      0% {
+        opacity: 0;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+
+    /* Apply animation to the images */
+    .hero img:nth-child(1) {
+      animation: imageTransition 12s infinite;
+    }
+
+    .hero img:nth-child(2) {
+      animation: imageTransition 12s 4s infinite;
+    }
+
+    .hero img:nth-child(3) {
+      animation: imageTransition 12s 8s infinite;
+    }
       /* Footer */
       .footer {
         background-color: #2563eb;
@@ -125,18 +185,30 @@
         </div>
       </div>
     </nav>
+ <div class="hero">
+ 
+    <img src="./pic/DD.jpg" alt="Hero Image 1" class="section-img img-fluid rounded" />
+   <img src="./pic/DD.jpg" alt="Hero Image 2" class="section-img img-fluid rounded" />
+   <img src="./pic/DD.jpg" alt="Hero Image 3" class="section-img img-fluid rounded" />
+    
 
+    <div class="content">
+	 
+	 <h1>SIR ZAHID HUSSAIN SIYAL</h1>
+      <h1>Think like a proton<br>always positive!</h1>
+    </div>
+           </div>
     <!-- Main Content Section -->
     <div class="container py-5">
       <div class="row justify-content-center align-items-center">
         <!-- Left-side text -->
         <div class="col-12 col-md-6 text-center mb-4 mb-md-0">
-          <p class="text-blue-900 text-2xl">WELCOME WELCOME</p>
-          <p class="text-center">LEARN CHEMISTRY WITH ME</p>
+          <p class="text-blue-900 text-2xl">Hey Dear Students</p>
+          <p class="text-center">Chemistry isn’t just about memorizing formulas – it’s about understanding how everything around us works, from the air we breathe to the food we eat. Let’s dive into the real-world magic of chemistry together, explore how it impacts our daily lives, and make it fun! Don’t hesitate to ask questions or share your thoughts. We’ve got this!</p>
           <p class="text-center text-red-500 text-2xl">
             PROF: ZAHID HUSSAIN SIYAL
           </p>
-          <p class="text-center text-red-500 text-2xl">CHEMISTRY EXPERT</p>
+    
           <p class="text-center text-black-500 text-xl">
             Don’t forget to subscribe to my channel & share your thoughts in the
             comments
