--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         }
     </style>
   </head>
-  <body>
+   <body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-4">
       <div class="container-fluid">
