--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-4">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="./ChemistryWithMe.html"
-          >ChemistryWithMe</a
-        >
+        <a class="navbar-brand text-white" href="./pages/ChemistryWithMe.html">ChemistryWithMe</a>
+
         <button
           class="navbar-toggler"
           type="button"
