--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
     </nav>
  <div class="hero">
  
-    <img src="./pic/DD.jpg" alt="Hero Image 1" class="section-img img-fluid rounded" />
-   <img src="./pic/DD.jpg" alt="Hero Image 2" class="section-img img-fluid rounded" />
-   <img src="./pic/DD.jpg" alt="Hero Image 3" class="section-img img-fluid rounded" />
+    <img src="./BB.jpg" alt="Hero Image 1" class="section-img img-fluid rounded" />
+   <img src="./BB.jpg" alt="Hero Image 2" class="section-img img-fluid rounded" />
+   <img src="./BB.jpg" alt="Hero Image 3" class="section-img img-fluid rounded" />
     
 
     <div class="content">
