--- a/index.html
+++ b/index.html
@@ -186,15 +186,16 @@
     </nav>
  <div class="hero">
  
-    <img src="./BB.jpg" alt="Hero Image 1" class="section-img img-fluid rounded" />
-   <img src="./BB.jpg" alt="Hero Image 2" class="section-img img-fluid rounded" />
-   <img src="./BB.jpg" alt="Hero Image 3" class="section-img img-fluid rounded" />
+    <img src="./33.jpg" alt="Hero Image 1" class="section-img img-fluid rounded" />
+   <img src="./11.jpg" alt="Hero Image 2" class="section-img img-fluid rounded" />
+   <img src="./33.jpg" alt="Hero Image 3" class="section-img img-fluid rounded" />
     
 
     <div class="content">
 	 
 	 <h1>SIR ZAHID HUSSAIN SIYAL</h1>
       <h1>Think like a proton<br>always positive!</h1>
+	    <p>Chemistry is easier than you might think – it’s just like protons! Small, but essential, and they help hold everything together. Once we start breaking it down and seeing the connections, it all starts to make sense. Let’s take it slow, enjoy the process, and realize that chemistry is just a collection of simple ideas coming together. With the right mindset, it’s all fun and easy!"</p>
     </div>
            </div>
     <!-- Main Content Section -->
