--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
 	    <p>Chemistry is easier than you might think – it’s just like protons! Small, but essential, and they help hold everything together. Once we start breaking it down and seeing the connections, it all starts to make sense. Let’s take it slow, enjoy the process, and realize that chemistry is just a collection of simple ideas coming together. With the right mindset, it’s all fun and easy!"</p>
     </div>
            </div>
+	     <p class="text-center text-danger fs-4">
+        Exciting news<br>Entry test preparation starts in March – feel free to contact me for any guidance!
+      </p>
     <!-- Main Content Section -->
     <div class="container py-5">
       <div class="row justify-content-center align-items-center">
