--- a/pages/CONTACT.html
+++ b/pages/CONTACT.html
@@ -112,9 +112,10 @@
               <a
                 class="nav-link text-white active"
                 aria-current="page"
-                href="index.html"
+                href="./pages/index.html"
                 >HOME</a
               >
+             
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="./ONLINE-TEST.html"
