--- a/pages/CONTACT.html
+++ b/pages/CONTACT.html
@@ -112,24 +112,42 @@
               <a
                 class="nav-link text-white active"
                 aria-current="page"
-                href="./pages/index.html"
+                href="../index.html"
+                aria-label="Go to Home Page"
                 >HOME</a
               >
-             
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./ONLINE-TEST.html"
+              <a
+                class="nav-link text-white"
+                href="./onlineTest.html"
+                aria-label="Online Test"
                 >ONLINE TEST</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./TEST-PDF.html">TEST PDF</a>
+              <a
+                class="nav-link text-white"
+                href="./TEST-PDF.html"
+                aria-label="Download Test PDFs"
+                >TEST PDF</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./CONTACT.html">CONTACT</a>
+              <a
+                class="nav-link text-white"
+                href="./CONTACT.html"
+                aria-label="Contact Us"
+                >CONTACT</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./ABOUT.html">ABOUT</a>
+              <a
+                class="nav-link text-white"
+                href="./ABOUT.html"
+                aria-label="About Us"
+                >ABOUT</a
+              >
             </li>
           </ul>
         </div>
