--- a/pages/ABOUT.html
+++ b/pages/ABOUT.html
@@ -77,7 +77,7 @@
               <a
                 class="nav-link text-white active"
                 aria-current="page"
-                href="../index.html"
+                href="./pages/index.html"
                 aria-label="Go to Home Page"
                 >HOME</a
               >
