--- a/pages/CONTACT.html
+++ b/pages/CONTACT.html
@@ -147,7 +147,7 @@
                 href="./ABOUT.html"
                 aria-label="About Us"
                 >ABOUT</a
-              >
+              ></nav>
             </li>
           </ul>
         </div>
