--- a/pages/CONTACT.html
+++ b/pages/CONTACT.html
@@ -107,15 +107,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a
-              class="nav-link text-white active"
-              aria-current="page"
-              href="./index.html"
-              aria-label="Go to Home Page"
-              >HOME</a
-            >
-          </li>
+         <a class="nav-link text-white active" href="./pages/index.html" aria-label="Go to Home Page">HOME</a>
           <li class="nav-item">
             <a
               class="nav-link text-white"
