--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
     /* Text content on top of the hero image */
     .hero .content {
       position: absolute;
-      top: 50%;
+      top: 45%;
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
-      color: white;
+      color: red;
 	  
       z-index: 1;
     }
 
     .hero .content h1 {
-      font-size: 1.5rem;
+      font-size: 1.4rem;
       margin: 0;
     }
 
@@ -76,15 +76,15 @@
 
     /* Apply animation to the images */
     .hero img:nth-child(1) {
-      animation: imageTransition 12s infinite;
+      animation: imageTransition 3s infinite;
     }
 
     .hero img:nth-child(2) {
-      animation: imageTransition 12s 4s infinite;
+      animation: imageTransition 3s 4s infinite;
     }
 
     .hero img:nth-child(3) {
-      animation: imageTransition 12s 8s infinite;
+      animation: imageTransition 3s 8s infinite;
     }
       /* Footer */
       .footer {
