--- a/pages/CONTACT.html
+++ b/pages/CONTACT.html
@@ -105,9 +105,17 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-         <a class="nav-link text-white active" href="./pages/index.html" aria-label="Go to Home Page">HOME</a>
+              <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a
+                class="nav-link text-white active"
+                aria-current="page"
+                href="../index.html"
+                aria-label="Go to Home Page"
+                >HOME</a
+              >
+            </li>
           <li class="nav-item">
             <a
               class="nav-link text-white"
