--- a/pages/ABOUT.html
+++ b/pages/ABOUT.html
@@ -71,13 +71,13 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a
                 class="nav-link text-white active"
                 aria-current="page"
-                href="./pages/index.html"
+                href="../index.html"
                 aria-label="Go to Home Page"
                 >HOME</a
               >
