--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     .hero .content p {
       font-size: 1.2rem;
-	    color: white;
+	    color: black;
     }
 
     /* Keyframe for image transitions */
