--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -803,7 +803,7 @@
             },
 
             {
-              title: "6...",
+              title: "6.STATE OF MATTER III:SOLIDS ",
               questions: [
                 {
                   question: "It is an example of crystalline solid:",
@@ -814,23 +814,23 @@
                 },
                 {
                   question:
-                    "Ice is a molecular solid, the intermolecular force of attraction among its molecules are:",
+                    "Molecular crystal have nature of bond:",
                   options: [
                     "Hydrogen bonding",
                     "Dipole-Dipole force",
                     "London dispersion force",
                     "All of these",
                   ],
-                  correct: "Hydrogen bonding",
+                  correct: "All of these",
                   explanation:
-                    "Ice has hydrogen bonding between its molecules, which gives it its unique properties.",
+                    "Molecular crystals can exhibit a variety of intermolecular forces such as **hydrogen bonding**, **dipole-dipole interactions**, and **London dispersion forces**, depending on the molecules involved",
                 },
                 {
-                  question: "Bucky ball is an example of _____ solid:",
+                  question: "NaCl & MgO are an example of _____ solid:",
                   options: ["Ionic", "Covalent", "Molecular", "Metallic"],
-                  correct: "Molecular",
+                  correct: "Ionic",
                   explanation:
-                    "Bucky ball (C₆₀) is a molecular solid made up of carbon atoms arranged in a spherical structure.",
+                    "NaCl (sodium chloride) and MgO (magnesium oxide) are **ionic solids** because they are held together by strong electrostatic forces between oppositely charged ions.",
                 },
                 {
                   question:
@@ -845,13 +845,12 @@
                   explanation:
                     "Lattice energy refers to the energy required to break a crystal into its gaseous ions.",
                 },
-                {
-                  question: "The transition temperature of Sulphur is:",
-                  options: ["112.8°C", "119°C", "444°C", "95.5°C"],
-                  correct: "112.8°C",
-                  explanation:
-                    "The transition temperature for sulfur is 112.8°C, where it changes from rhombic to monoclinic form.",
-                },
+                              {
+          question: "The monoclinic Sulphur is stable at:",
+          options: ["above 95.5°C", "119°C", "444°C", "below 95.5°C"],
+           correct: "above 95.5°C",
+           explanation: "Monoclinic sulfur is stable **above 95.5°C**, and below this temperature, sulfur exists in the rhombic form."
+},
                 {
                   question:
                     "If a=b#c and α=β=γ=90° in unit cell then it is identified as:",
@@ -878,18 +877,11 @@
                   explanation:
                     "Monoclinic unit cell has a # b # c and α = γ = 90° while β ≠ 90°.",
                 },
-                {
-                  question: "Silicon Carbide is an example of:",
-                  options: [
-                    "Ionic solid",
-                    "Covalent solid",
-                    "Molecular solid",
-                    "Metallic solid",
-                  ],
-                  correct: "Covalent solid",
-                  explanation:
-                    "Silicon carbide (SiC) is a covalent solid, where the atoms are connected by covalent bonds.",
-                },
+                question: "Diamond is an example of:",
+    options: ["Ionic solid", "Covalent solid", "Molecular solid", "Metallic solid"],
+    correct: "Covalent solid",
+    explanation: "Diamond is a **covalent solid** where each carbon atom forms a strong covalent bond with four other carbon atoms, creating a rigid lattice structure."
+},
                 {
                   question:
                     "A crystalline solid shows the property that varies with direction is called:",
@@ -959,16 +951,16 @@
                 },
                 {
                   question:
-                    "The substance which can exist in more than one crystalline form is called:",
+                    "The elements which can exist in more than one crystalline form is called:",
                   options: [
                     "Isomorphous",
                     "Polymorphous",
                     "Allotropy",
                     "None of these",
                   ],
-                  correct: "Polymorphous",
+                  correct: "Allotropy",
                   explanation:
-                    "Polymorphous substances can exist in more than one crystalline form.",
+                    "The property of an element to exist in more than one crystalline form is called **allotropy**. Carbon, for example, exists as both diamond and graphite.",
                 },
                 {
                   question:
@@ -2072,7 +2064,7 @@
               ],
             },
             {
-              title: "6 : name",
+              title: "6.ALKYL, HALIDES AND AMINES",
               questions: [
                 {
                   question:
@@ -2106,7 +2098,7 @@
                 },
                 {
                   question:
-                    "Sec: alkyl halide can give SN2 mechanism when solvent is:",
+                    "Sec: alkyl halide can give SN₂ mechanism when solvent is:",
                   options: ["Polar", "Non-polar", "Both", "None of these"],
                   correct: "Polar",
                   explanation: "SN2 reactions favor polar aprotic solvents.",
