--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -221,6 +221,7 @@
         <button class="btn start-btn" onclick="selectChapter(4)">
           12th:Chemistry
         </button>
+	      <h2 style="text-align: center; color: blue; font-size: 18px">Dear students: More MCQs will be provided to you as soon as possible</h2>
       </div>
 
       <div id="chapter-selection" class="section">
@@ -1609,7 +1610,7 @@ correct: "Covalent solid",
             },
             
             {
-              title: "6.ALKYL, HALIDES AND AMINES",
+              title: "6.HALIDES AND AMINES",
               questions: [
                 {
                   question:
