--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 	 
 	 <h1>SIR ZAHID HUSSAIN SIYAL</h1>
       <h1>Think like a proton<br>always positive!</h1>
-	    <p>Chemistry is easier than you might think – it’s just like protons! Small, but essential, and they help hold everything together. Once we start breaking it down and seeing the connections, it all starts to make sense. Let’s take it slow, enjoy the process, and realize that chemistry is just a collection of simple ideas coming together. With the right mindset, it’s all fun and easy!"</p>
+	    <p>Chemistry is easier than you might think – it’s just like protons! Small, but essential, and they help hold everything together. Once we start breaking it down and seeing the connections, it all starts to make sense. Let’s take it slow, enjoy the process, and realize that chemistry is just a collection of simple ideas coming together. With the right mindset. it’s all fun and easy!</p>
     </div>
            </div>
 	     <p class="text-center text-danger fs-4">
