--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -1817,7 +1817,232 @@ correct: "Covalent solid",
                 },
               ],
             },
-            
+            {
+              title: "7.ALCOHOLS, PHENOLS AND ETHERS",
+              questions: [
+                {
+                  question: "Chloro benzene reacts with NaOH to form________:",
+                  options: ["Phenol", "Sodium phenoxide", "Both", "N.O.T"],
+                  correct: "Sodium phenoxide",
+                  explanation:
+                    "Chloro benzene reacts with NaOH in a nucleophilic substitution reaction to form sodium phenoxide.",
+                },
+                {
+                  question: "Which one is greater bond angle?",
+                  options: ["Water", "Alcohol", "Ether", "N.O.T"],
+                  correct: "Ether",
+                  explanation:
+                    "Ether has a larger bond angle compared to water and alcohol due to its less polar structure.",
+                },
+                {
+                  question:
+                    "O-H bond breaking order of reactivity of alcohols is :",
+                  options: ["1°≤2°≤3", "1°≥2°≤3°", "1°≥2°≥3°", "N.O.T"],
+                  correct: "1°≤2°≤3",
+                  explanation:
+                    "The reactivity of alcohols increases as the carbon atom bonded to the hydroxyl group becomes more substituted, with 3° alcohols being more reactive than 2° alcohols, and 2° alcohols more reactive than 1° alcohols.",
+                },
+                {
+                  question: "Which compound has greater boiling point?",
+                  options: [
+                    "n-butanol",
+                    "iso-butanol",
+                    "iso-propanol",
+                    "ethanol",
+                  ],
+                  correct: "n-butanol",
+                  explanation:
+                    "n-Butanol has a greater boiling point due to its higher molecular weight and ability to form hydrogen bonds.",
+                },
+                {
+                  question: "Ethyl alcohol on dehydration gives :",
+                  options: ["Ether", "Ethene", "Both", "Ethane"],
+                  correct: "Ethene",
+                  explanation:
+                    "Dehydration of ethyl alcohol typically forms ethene as a product.",
+                },
+                {
+                  question: "Oxidizing agents are ________.",
+                  options: ["K₂CrO₄", "KMnO₄", "PCC", "A.O.T"],
+                  correct: "A.O.T",
+                  explanation:
+                    "Both **K₂CrO₄ (Potassium chromate)** and **KMnO₄ (Potassium permanganate)** are strong oxidizing agents, while **PCC** (Pyridinium chlorochromate) is a milder oxidizing agent.",
+                },
+                {
+                  question: "When sec:propyl is oxidized, it will give:",
+                  options: ["Alcohol", "Acetic acid", "Ketone", "N.O.T"],
+                  correct: "Ketone",
+                  explanation:
+                    "Oxidation of sec-propyl (secondary alcohol) gives a ketone.",
+                },
+                {
+                  question:
+                    "Ester reacts with Grignard reagent to produce ______.",
+                  options: ["Ketone", "1° Alcohol", "2° Alcohol", "3° Alcohol"],
+                  correct: "3° Alcohol",
+                  explanation:
+                    "Grignard reagents add to esters to form tertiary alcohols after hydrolysis.",
+                },
+                {
+                  question: "Ketone on reduction gives ______.",
+                  options: ["Ester", "1° Alcohol", "2° Alcohol", "3° Alcohol"],
+                  correct: "2° Alcohol",
+                  explanation: "Reduction of ketones gives secondary alcohols.",
+                },
+                {
+                  question:
+                    "When propylene glycol is treated with periodic acid, it produces __________.",
+                  options: ["Formaldehyde", "Acetaldehyde", "Both", "N.O.T"],
+                  correct: "Acetaldehyde",
+                  explanation:
+                    "When propylene glycol is treated with periodic acid, it cleaves to produce **acetaldehyde**.",
+                },
+                {
+                  question: "Rubbing alcohol is a mixture of__________.",
+                  options: [
+                    "Isopropyl alcohol in water",
+                    "Ethanol + Methanol",
+                    "Methanol + Water",
+                    "Ethanol+Water",
+                  ],
+                  correct: "Isopropyl alcohol in water",
+                  explanation:
+                    "Rubbing alcohol commonly contains isopropyl alcohol mixed with water.",
+                },
+                {
+                  question:
+                    "Conversion of ethanol to ethene in presence of _________ reagent:",
+                  options: ["HIO₄", "KMnO4", "H₂SO₄", "A.O.T"],
+                  correct: "H₂SO₄",
+                  explanation:
+                    "Ethanol is converted to ethene upon dehydration using concentrated sulfuric acid (H2SO4).",
+                },
+                {
+                  question: "Formula of thionyl chloride is _________",
+                  options: ["ZnCl₂", "SOCl₂", "HIO₄", "N.O.T"],
+                  correct: "SOCl₂",
+                  explanation:
+                    "The formula of thionyl chloride is SOCl2, often used for chlorination reactions.",
+                },
+                {
+                  question:
+                    "Ethyl alcohol reacts with an excess of conc: H2SO4 to form:",
+                  options: [
+                    "Ethylene",
+                    "Di ethyl ether",
+                    "Ethyl chloride",
+                    "N.O.T",
+                  ],
+                  correct: "Di ethyl ether",
+                  explanation:
+                    "When ethyl alcohol reacts with concentrated sulfuric acid at 140°C, it undergoes dehydration to form **diethyl ether** (C2H5OC2H5).",
+                },
+                {
+                  question: "When Nu- attacked on alcohol______ is broken.",
+                  options: ["C-O bond", "O-H bond", "Both", "N.O.T"],
+                  correct: "C-O bond",
+                  explanation:
+                    "During nucleophilic substitution reactions, the C-O bond of alcohols breaks to form the product.",
+                },
+                {
+                  question: "Reducing agents are ________?",
+                  options: ["LiAlH₄", "NaBH₄", "Both", "N.O.T"],
+                  correct: "Both",
+                  explanation:
+                    "Both LiAlH4 and NaBH4 are commonly used reducing agents in organic chemistry.",
+                },
+                {
+                  question:
+                    "Carboxylic acid & ester on reduction give________ alcohol.",
+                  options: ["Primary", "Secondary", "Tertiary", "Methyl"],
+                  correct: "Primary",
+                  explanation:
+                    "Reduction of carboxylic acids and esters typically forms primary alcohols.",
+                },
+                {
+                  question: "Which one has strong hydrogen bonding?",
+                  options: ["Alcohol", "Ether", "Ketone", "Phenol"],
+                  correct: "Alcohol",
+                  explanation:
+                    "Alcohols have strong hydrogen bonding due to the presence of a hydroxyl group (-OH), which can form hydrogen bonds with water molecules or other alcohol molecules.",
+                },
+                {
+                  question:
+                    "Aldehyde & ketones produce alcohols when__________.",
+                  options: [
+                    "Hydrogenation takes place",
+                    "React with reducing agent",
+                    "Both",
+                    "N.O.T",
+                  ],
+                  correct: "Both",
+                  explanation:
+                    "Both hydrogenation and reaction with reducing agents can convert aldehydes and ketones into alcohols.",
+                },
+                {
+                  question: "Ethyl chloride reacts with NaOH to produce ?",
+                  options: ["Ethyl alcohol", "Aldehyde", "Ester", "A.O.T"],
+                  correct: "Ethyl alcohol",
+                  explanation:
+                    "Ethyl chloride reacts with NaOH in a nucleophilic substitution to produce ethyl alcohol.",
+                },
+                {
+                  question: "When phenol is oxidized it will give __________.",
+                  options: [
+                    "Benzene",
+                    "Benzoquinone",
+                    "Toluene",
+                    "Benzoic acid",
+                  ],
+                  correct: "Benzoquinone",
+                  explanation: "Oxidation of phenol forms benzoquinone.",
+                },
+                {
+                  question:
+                    "Formaldehyde reacts with Grignard reagent to produce ______.",
+                  options: [
+                    "Acetic Acid",
+                    "Ester",
+                    "Primary alcohol",
+                    "Secondary alcohol",
+                  ],
+                  correct: "Primary alcohol",
+                  explanation:
+                    "Formaldehyde reacts with Grignard reagents to form primary alcohols after hydrolysis.",
+                },
+                {
+                  question: "Acetone oxidized to give ___________?",
+                  options: [
+                    "Ethanoic acid",
+                    "Dimethyl ether",
+                    "Secondary propyl alcohol",
+                    "N.O.T",
+                  ],
+                  correct: "Ethanoic acid",
+                  explanation:
+                    "Acetone oxidation leads to the formation of ethanoic acid.",
+                },
+                {
+                  question: "Which of the following is a dihydric phenol.",
+                  options: ["Resorcinol", "Catechol", "Hydroquinone", "A.O.T"],
+                  correct: "A.O.T",
+                  explanation:
+                    "All three compounds (**Resorcinol**, **Catechol**, and **Hydroquinone**) are dihydric phenols, as they each contain two hydroxyl groups (-OH) attached to a benzene ring.",
+                },
+                {
+                  question: "Oxonium ion is stable in _________",
+                  options: [
+                    "Dilute acid",
+                    "Concentrated acid",
+                    "Both",
+                    "N.O.T",
+                  ],
+                  correct: "Concentrated acid",
+                  explanation:
+                    "Oxonium ions are typically more stable in concentrated acid, where protonation is more favorable.",
+                },
+              ],
+            },
           ],
         },
       };
